# tagline

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: movies.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  interfaces.ts
frontend/src/components/: MovieInfo.tsx
src/: cli.rs  main.rs  tmdb.rs
