[package]
name = "tagline"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = {version = "0.13.2", features = ["json"]}
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.149"
rand = "0.10.0"
tower-http = { version = "0.6.8", features = ["fs"]}